Fix logo overlap with links in Firefox (Issue #163)
Firefox and Opera ignore max-width in inlined images. This fix
sets the width to 100% for the log image so it is picked up.

--- a/content/static/css/style.css
+++ b/content/static/css/style.css
@@ -286,3 +286,10 @@ h3 a, h4 a    {color: black}
 ol.outline    {list-style-type: upper-alpha}
 ol.outline ol {list-style-type: decimal}
 span.question {font-weight: bold}
+
+/* use width instead of max-width in logo because
+ * FF and opera ignore max-width in inlined images
+ */
+.brand img {
+    width: 100%
+}
